1차 런칭 배포

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="40대 전후의 '요즘 감성 적응력'을 웃으면서 확인하는 밈 기반 영포티 테스트"
+      content="40대 전후의 '요즘 감성 적응력'을 웃으면서 확인하는 밈 기반 스윗 영포티 테스트"
     />
 
     <!-- Open Graph (카카오톡 공유 최적화) -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="나는 과연 영포티일까? - 영포티 테스트" />
+    <meta property="og:title" content="나는 과연 스윗 영포티일까? - 스윗 영포티 테스트" />
     <meta
       property="og:description"
       content="40대 전후의 '요즘 감성 적응력'을 웃으면서 확인하는 밈 기반 테스트"
@@ -26,14 +26,14 @@
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="나는 과연 영포티일까? - 영포티 테스트" />
+    <meta name="twitter:title" content="나는 과연 스윗 영포티일까? - 스윗 영포티 테스트" />
     <meta name="twitter:description" content="40대 전후의 '요즘 감성 적응력'을 웃으면서 확인하는 밈 기반 테스트" />
     <meta name="twitter:image" content="/og-image.png" />
 
     <!-- 테마 컬러 -->
     <meta name="theme-color" content="#667eea" />
 
-    <title>나는 과연 영포티일까? - 영포티 테스트</title>
+    <title>나는 과연 스윗 영포티일까? - 스윗 영포티 테스트</title>
 
     <!-- Google AdSense -->
     <script
@@ -116,7 +116,7 @@
     <div id="loading-screen">
       <div class="loading-content">
         <div class="loading-emoji">🤔</div>
-        <div class="loading-text">나는 과연 영포티일까?</div>
+        <div class="loading-text">나는 과연 스윗 영포티일까?</div>
         <div class="loading-subtext">테스트 준비 중...</div>
         <div class="spinner"></div>
       </div>
